Avance simulador seguros

--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,8 @@
 		<title>Curso de Javascript 70770</title>
 	</head>
 	<body>
-   		<h1>Hola Mundo</h1>
-		<h2>¿como te va?</h2>
-		<script src="01_for.js"></script>
+   		<h1>Cotizador de seguros</h1>
+		<h2>Bienvenido</h2>
+		<script src="Simulador Interactivo (primer entrega obligatoria).js"></script>
 </body>
 </html>
