Arrays no obligatorio

--- a/Index.html
+++ b/Index.html
@@ -8,6 +8,6 @@
 	<body>
    		<h1>Cotizador de seguros</h1>
 		<h2>Bienvenido</h2>
-		<script src="Simulador Interactivo (primer entrega obligatoria).js"></script>
+		<script src="Entregable no obligatorio Arrays.js"></script>
 </body>
 </html>
