practica con dom

--- a/Index.html
+++ b/Index.html
@@ -6,8 +6,10 @@
 		<title>Curso de Javascript 70770</title>
 	</head>
 	<body>
-   		<h1>Cotizador de seguros</h1>
-		<h2>Bienvenido</h2>
-		<script src="Pre entrega.js"></script>
+   		<h1>Practica con DOM</h1>
+		<p id="parrafo">Un poco de texto parrafo</p>
+		<h3>Titulo h3</h3>
+		<h3 class="h3-2">Otro titulo h3</h3>
+		<script src="Practica con DOM.js"></script>
 </body>
 </html>
