--- a/Index.html
+++ b/Index.html
@@ -4,12 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Curso de Javascript 70770</title>
+		<link rel="stylesheet" href="Cs.css">
 	</head>
 	<body>
-   		<h1>Practica con DOM</h1>
-		<p id="parrafo">Un poco de texto parrafo</p>
-		<h3>Titulo h3</h3>
-		<h3 class="h3-2">Otro titulo h3</h3>
-		<script src="Practica con DOM.js"></script>
+		<button id="Evento">Boton</button>
+		<script src="Desafio eventos.js"></script>
 </body>
 </html>
